fix project page spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -802,6 +802,7 @@ a {
 	text-align: center;
 	margin-top: 2em;
 	margin-bottom: 0;
+	width: 60vw;
 }
 
 .project-container-light {
